# bigsaddle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: BImg.cmake  Bgfx.cmake  Big.cmake  Config.cmake  Entt.cmake  Examples.cmake  Fmt.cmake  GL.cmake  Glm.cmake  Gui.cmake  ImGui.cmake  NanoVG.cmake  Pugi.cmake  Sdl.cmake  Shell.cmake  Standard.cmake  Stb.cmake  Utils.cmake  Wayland.cmake  X11.cmake
cmake/bgfx/: shader.cmake
examples/: CMakeLists.txt  common.h  example_app.cpp  example_app.h  example_dialog.cpp
examples/00-helloworld/: CMakeLists.txt  helloworld.cpp  main.cpp
examples/01-cubes/: CMakeLists.txt  cubes.cpp  main.cpp
examples/02-metaballs/: CMakeLists.txt  data.h  metaballs.cpp
examples/03-raymarch/: CMakeLists.txt  raymarch.cpp
examples/04-mesh/: CMakeLists.txt  mesh.cpp
examples/20-nanovg/: CMakeLists.txt  main.cpp  main.h  util.cpp
examples/50-quad/: CMakeLists.txt  quad.cpp
examples/50-sprite/: CMakeLists.txt  sprite.cpp
examples/51-sprite/: CMakeLists.txt  fs_sprite.sc  sprite.cpp  varying.def.sc  vs_sprite.sc
examples/52-spritesheet/: CMakeLists.txt  spritesheet.cpp
examples/53-animatedsprite/: CMakeLists.txt  animatedsprite.cpp
examples/54-tileset/: CMakeLists.txt  tileset.cpp
examples/55-tilemap/: CMakeLists.txt  tilemap.cpp
examples/common/: color.h  csv.h  entity.cpp  entity.h  model.h  sprite.h  texture.h  tile.h  timer.h
src/bgfx/: CMakeLists.txt  renderer_vk.cpp  renderer_vk.h
src/bgfx/utils/: CMakeLists.txt  utils.cpp
src/bigsaddle/: CMakeLists.txt  app.cpp  app.h  stb.cpp
src/bigsaddle/gui/: CMakeLists.txt  gui.cpp  gui.h  gui_font.cpp  gui_font.h  gui_hooks.cpp  gui_renderer.cpp  gui_renderer.h  gui_user.cpp  gui_user.h  gui_viewport.cpp  gui_viewport.h
src/bigsaddle/gui/renderer/: gui_renderer.cpp  gui_renderer.h
src/bigsaddle/gui/viewport/: gui_viewport.cpp  gui_viewport.h  gui_viewport_hooks.cpp  platform_hooks.cpp  renderer_hooks.cpp
src/bigsaddle/shell/: CMakeLists.txt  dispatcher.cpp  dispatcher.h  surface.cpp  surface.h  window.h  window_base.cpp  window_base.h
src/bigsaddle/shell/platform/wayland/: CMakeLists.txt  wayland_window.cpp  wayland_window.h
src/bigsaddle/shell/platform/windows/: CMakeLists.txt  win32_window.cpp  win32_window.h
src/bigsaddle/shell/platform/x11/: CMakeLists.txt  x11_window.cpp  x11_window.h
src/bimg/: CMakeLists.txt
src/imgui/: CMakeLists.txt  imconfig.h
src/nanovg/: CMakeLists.txt
src/stb/: CMakeLists.txt
